--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/demo/demo",
-    "pages/ranking/ranking"
+    "pages/ranking/ranking",
+    "pages/personal/personal"
   ],
   "window": {
     "backgroundTextStyle": "light",
