--- a/project.config.json
+++ b/project.config.json
@@ -80,6 +80,13 @@
 					"id": -1,
 					"name": "pages/ranking/ranking",
 					"pathName": "pages/ranking/ranking",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/personal/personal",
+					"pathName": "pages/personal/personal",
 					"scene": null
 				}
 			]
